# Master-1-PPN

./: .gitignore  CMakeLists.txt  Makefile  README.md  Règles Format.md  convert2png.sh  image_processing.c  image_processing.h  launch.sh  main.c  nn.c  nn.h  plot.gp  testfile
Test/: test-conv.c  test-nn.c  test-storage.c  testconv.c
apps/: CMakeLists.txt  main.c  testing.c
data/: default_config.cfg
include/: evaluation.h  global.h  image_processing.h  store.h  type.h
include/context/: context.h
include/convolution_neural_network/: evaluation.h  store.h  training.h
include/convolution_neural_network/convolution_layer/: convolution_layer.h  preprocess_image.h
include/convolution_neural_network/neural_network/: activation.h  layer.h  mpi_context.h  neural_network.h
include/image/: dataset_manager.h  directory_manager.h  file_manager.h  image_io.h  image_processing.h
include/nn/: nn.h
scripts/: clean_rename.sh  convert2png.sh  launch.sh  oversample.py  plot.gp  setup.sh
src/: CMakeLists.txt  edge_detection.c  edge_detection.h  evaluation.c  file_manager.c  file_manager.h  image_processing.c  image_processing.h  main.c  nn.c  nn.h  store.c  testconv.c  testing.c  type.h
src/context/: CMakeLists.txt  context.c
src/convolution_neural_network/: CMakeLists.txt  evaluation.c  store.c  training.c
src/convolution_neural_network/convolution_layer/: CMakeLists.txt  convolution_layer.c  preprocess_image.c
src/convolution_neural_network/neural_network/: CMakeLists.txt  activation.c  layer.c  layer_communication.c  neural_network.c  neural_network_communication.c
src/dataset/: CMakeLists.txt
src/image/: CMakeLists.txt  dataset_manager.c  directory_manager.c  file_manager.c  image_io.c  image_processing.c
src/nn/: CMakeLists.txt  store.c
tests/: test-storage.c
